hphp/hack/test/typecheck/shape/shape_field_check/shape_at2.php
<?hh

type ClosedShape = shape(
  'required' => int,
);

function test(ClosedShape $closed_shape): void {
  $_ = Shapes::at($closed_shape, 'missing');
}
